sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:6: error: '<-' expected but ')' found.
		for (0 to getMondeValeurs-2){
                                           ^AlgBubbleSort2:14: error: illegal start of simple expression
	}
        ^